--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
-streamlit
-fastapi
-uvicorn
-joblib
-pandas
-xgboost
-scikit-learn
+# Core framework
+streamlit>=1.35
+
+# Data handling
+pandas>=2.0
+numpy>=1.26
+
+# Machine learning
+scikit-learn>=1.3
+xgboost>=2.0
+
+# Serialization
+joblib>=1.3
+
